last changes for tailwind and removed some uneccessary files

--- a/src/output.css
+++ b/src/output.css
@@ -545,6 +545,16 @@ video {
   --tw-contain-style:  ;
 }
 
+.bg-slate-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
+.bg-slate-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
 .text-center {
   text-align: center;
 }
